# stock-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: stock-briefing.yml
deploy/: stock-tracker.crontab
scripts/: install_cron.sh  install_launchd.sh  run_briefing.sh  uninstall_launchd.sh
src/stock_tracker/: __init__.py  app.py  calendar.py  cli.py  launchd.py  llm.py  models.py  naver.py  reporting.py  slack.py
tests/: test_app.py  test_calendar.py  test_launchd.py  test_llm.py  test_naver.py  test_naver_parsing.py  test_reporting.py  test_slack.py
