[project]
name = "stock-tracker"
version = "0.1.0"
description = "KRX/Naver-based Korean stock market briefing bot for Slack webhooks"
authors = [
    { name = "OsoriAndOmori", email = "skywhite15@korea.ac.kr" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "exchange-calendars>=4.11.1",
    "requests>=2.32.5",
]

[project.scripts]
stock-tracker = "stock_tracker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
